test/algeff/wrong/scoped1.kk.out
test/algeff/wrong/scoped1.kk(62, 3): error: abstract type(s) escape(s) into the context
 term : choice
 inferred type: (xs : list<$a>) -> .op-choice